# vps-server

./: .env.example  .gitignore  AGENTS.md  CLAUDE.local.md  CLAUDE.md  CLAUDE.md.bak-2026-06-07-workflow-draft  README.md  TODO_IP_PROXY.md  config.py  log.py  main.py  mcp_server.py  probe_vps.example.py  pyproject.toml
core/: __init__.py  firewall.py  geoip.py  ports.py  proxy_check.py  security.py  session.py  ssh.py
db/: __init__.py  base.py  engine.py  migrate.py  models.py  queries.py  session.py
deploy/: README.md  com.vps-server.worker.plist  install-windows-nssm.md  vps-server-worker.service
docs/: deployment-flow.html
ip/: __init__.py  atom.py  manager.py
probe_vps/: __init__.py  bootstrap.py  config.py
proxy/: __init__.py  atom.py  manager.py
services/: ip_register.py  proxy_query.py  registration_query.py  vps_init.py  vps_install_xray.py  vps_register.py
ssh/: ops.py  session.py
task/: _TASK_TEMPLATE.md  done_01_vps_record_schema_v4.md  done_02_vps_task_table.md  done_03_xray_manager_new_methods_stub.md  done_04_ssh_worker_private_methods.md  done_05_ssh_worker_process_main.md  done_06_tools_register_vps_mcp_entry.md  done_07_xray_worker_implementation.md  done_08_pingtools_to_toolbox.md  done_09_vps_stage_lock_semantics.md  done_10_probe_vps_config.md  done_11_ip_record_status_and_ip_task_table.md  done_12_test_internal_socks_expose_exit_code.md  done_13_ip_probe_worker_implementation.md  done_14_tools_rgip_mcp_entry.md  done_15_proxy_deploy_prereq.md  done_16_proxy_deploy_worker_implementation.md  done_17_mcp_tools_4_set_overhaul.md  (+39 more)
(+184 files in other folders)
