[project]
name = "vps-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paramiko>=3.4.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "requests[socks]>=2.31.0",
    "mcp>=1.27.2",
]
